force-app/main/default/objects/NTE_Payment_Request__c/NTE_Payment_Request__c.object-meta.xml
<CustomObject>
    <description>Saved NTE payment request identities, charge snapshots and Stripe outcomes.</description>
<enableHistory>true</enableHistory><enableReports>true</enableReports>
    <label>NTE Payment Request</label>
    <nameField><displayFormat>NTE-PAY-{000000}</displayFormat><label>Payment Request</label><type>AutoNumber</type></nameField>
    <pluralLabel>NTE Payment Requests</pluralLabel><sharingModel>ReadWrite</sharingModel>
</CustomObject>