force-app/main/default/objects/NTE_Payment_Request__c/fields/Amount_Minor__c.field-meta.xml
<CustomField>
    <fullName>Amount_Minor__c</fullName>
    <label>Amount in Minor Units</label>
    <precision>18</precision><scale>0</scale>
    <type>Number</type>
</CustomField>