force-app/main/default/objects/NTE_Payment_Request__c/fields/Batch_Key__c.field-meta.xml
<CustomField>
    <fullName>Batch_Key__c</fullName>
    <label>Email Batch</label>
    <length>64</length>
    <type>Text</type>
</CustomField>