force-app/main/default/objects/NTE_Payment_Request__c/fields/Charge_Key__c.field-meta.xml
<CustomField>
    <fullName>Charge_Key__c</fullName>
    <label>Charge Key</label>
    <externalId>true</externalId><unique>true</unique>
    <length>100</length>
    <type>Text</type>
</CustomField>