force-app/main/default/objects/NTE_Payment_Request__c/fields/Delivered_At__c.field-meta.xml
<CustomField>
    <fullName>Delivered_At__c</fullName>
    <label>Payment Email Sent At</label>
    <type>DateTime</type>
</CustomField>