force-app/main/default/objects/NTE_Payment_Request__c/fields/First_Attempt_At__c.field-meta.xml
<CustomField>
    <fullName>First_Attempt_At__c</fullName>
    <label>First Attempt At</label>
    <type>DateTime</type>
</CustomField>