force-app/main/default/objects/NTE_Payment_Request__c/fields/Kind__c.field-meta.xml
<CustomField>
    <fullName>Kind__c</fullName>
    <label>Charge Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>