force-app/main/default/objects/NTE_Payment_Request__c/fields/Link_Id__c.field-meta.xml
<CustomField>
    <fullName>Link_Id__c</fullName>
    <label>Stripe Payment Link ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>