force-app/main/default/objects/NTE_Payment_Request__c/fields/Live_Mode__c.field-meta.xml
<CustomField>
    <fullName>Live_Mode__c</fullName>
    <label>Live Payment</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>