force-app/main/default/objects/NTE_Payment_Request__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Booking</label>
    <deleteConstraint>SetNull</deleteConstraint><referenceTo>Opportunity</referenceTo><relationshipLabel>NTE Payment Requests</relationshipLabel><relationshipName>NTE_Payment_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>