force-app/main/default/objects/NTE_Payment_Request__c/fields/Payment_URL__c.field-meta.xml
<CustomField>
    <fullName>Payment_URL__c</fullName>
    <label>Payment Link</label>
    <type>Url</type>
</CustomField>