force-app/main/default/objects/NTE_Payment_Request__c/fields/Price_Id__c.field-meta.xml
<CustomField>
    <fullName>Price_Id__c</fullName>
    <label>Stripe Price ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>