force-app/main/default/objects/NTE_Payment_Request__c/fields/Recipient__c.field-meta.xml
<CustomField>
    <fullName>Recipient__c</fullName>
    <label>Payment Email Recipient</label>
    <type>Email</type>
</CustomField>