force-app/main/default/objects/NTE_Payment_Request__c/fields/Reference__c.field-meta.xml
<CustomField>
    <fullName>Reference__c</fullName>
    <label>Booking Reference</label>
    <length>80</length>
    <type>Text</type>
</CustomField>