force-app/main/default/objects/NTE_Payment_Request__c/fields/Source_Fingerprint__c.field-meta.xml
<CustomField>
    <fullName>Source_Fingerprint__c</fullName>
    <label>Charge Snapshot</label>
    <length>64</length>
    <type>Text</type>
</CustomField>