force-app/main/default/objects/NTE_Payment_Request__c/fields/Source_Lead_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_Lead_Id__c</fullName>
    <label>Application ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>