force-app/main/default/objects/NTE_Payment_Request__c/fields/Stripe_Account__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Account__c</fullName>
    <label>Stripe Account</label>
    <length>60</length>
    <type>Text</type>
</CustomField>