force-app/main/default/objects/NTE_Payment_Request__c/fields/Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>Tax_Rate__c</fullName>
    <label>Tax Rate</label>
    <precision>18</precision><scale>2</scale>
    <type>Number</type>
</CustomField>