force-app/main/default/objects/NTE_Payment_Request__c/listViews/NTE_Payment_Requests.listView-meta.xml
<ListView>
    <fullName>NTE_Payment_Requests</fullName>
    <columns>NAME</columns><columns>Opportunity__c</columns><columns>Kind__c</columns><columns>Status__c</columns><columns>Reference__c</columns><columns>Delivered_At__c</columns>
    <filterScope>Everything</filterScope><label>NTE Payment Requests</label>
</ListView>